<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewEditAppliance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_appliance"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextApplianceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="enter Appliance Name"
        android:hint="@string/enter_appliance_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/spinnerApplianceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        style="@style/CustomButtonStyle"
        android:text="@string/save_changes"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
